--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-refresh": "^0.11.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-table": "^7.8.0",
     "redux-persist": "^6.0.0",
     "resolve": "^1.20.0",
