--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@mui/x-data-grid": "^6.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@svgr/webpack": "^5.5.0",
